# python-lab-collections

./: README.md  pyproject.toml  requirements.txt
src/: constants.py  exceptions.py  library.py  main.py  simulation.py
src/books/: audio_book.py  base.py  electronic_book.py  printed_book.py
src/collections/: author_index.py  base.py  book_collection.py  genre_index.py  isbn_index.py  year_index.py
tests/: fixtures.py  test_book.py  test_collections.py  test_library.py  test_simulation.py
